--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lufa"]
 	path = lufa
 	url = https://github.com/abcminiuser/lufa.git
+[submodule "chrono"]
+	path = chrono
+	url = https://github.com/SofaPirate/Chrono/
